--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,6 +2,7 @@
 <article>
   <h2><%= @recipe.title %></h2>
   <time>Updated <%= @recipe.updated_at %></time>
+  <img src="<%= @recipe.img_url %>">
   <p><%= @recipe.description %></p>
   <%= link_to "Edit recipe", edit_recipe_path(@recipe) %>
   <%= link_to "Delete recipe", recipe_path(@recipe), method: :delete %>
