--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,14 @@
 <div id="wrapper">
 </div>
 
-
-<div id="sign-in">
-<%= link_to "Sign Up", new_user_registration_path %>
-<%= link_to 'Login', new_user_session_path %>
-</div>
+<% if current_user %>
+    <%= link_to "Log Out", destroy_user_session_path, :method => :delete %>
+  <% else %>
+    <div id="sign-in">
+      <%= link_to "Sign Up", new_user_registration_path %>
+      <%= link_to 'Login', new_user_session_path %>
+    </div>
+  <% end %>
 
     <%= yield %>
   </body>
