API calls stored into DB

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,10 +87,10 @@
 
  a.fav {
   text-decoration: none;
-  color: red;
+  color: orange;
 }
 
 a.no-fav {
   text-decoration: none;
-  color: black;
+  color: white;
 }
