--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,11 +8,16 @@
  <tr>
  <th>Image</th>
  <th>Name</th>
+ <th> </th>
  </tr>
  <% @recipes.each do |course| %>
  <tr class=<%= cycle('even', 'odd') %>>
- <td><%= link_to(image_tag(course["image_url"], height: '200', width: '200'), course["f2f_url"])%></td>
- <td><%= link_to(course["title"], course["f2f_url"]) %> </td>
+   <td><%= link_to(image_tag(course["img_url"], height: '200', width: '200'), course["f2f_url"])%></td>
+  <td><%= link_to(course["title"], course["f2f_url"]) %> </td>
+  <td>
+    <%= link_to "&#9734;".html_safe, remove_external_favorite_recipe_path(course), method: :delete, class: "fav" %>
+    <%= link_to "&#9734;".html_safe, add_external_favorite_recipe_path(course), method: :post, class: "no-fav" %>
+  </td>
  </tr>
  <% end %>
 </table>
