new search results page format

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
 
   <body>
 
-    <!--<logo>--> <nav> Menu 1 | Menu 2 | Menu 3 </nav>
+    <!--<logo>--> <nav> <%= link_to "Home", root_path %> |   | Menu 3 </nav>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-  
+
 
 <div id="wrapper">
 </div>
