--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,24 +1,21 @@
-<h1>Searching for - <%= @search_term %></h1>
+<h1>Results for: <%= @search_term %></h1>
 
 <% if (@recipes.nil? or @recipes == []) %>
 <p> <h2>No recipes found.. Sorry</h2></p>
 <% else %>
 
-<table border="1">
- <tr>
- <th>Image</th>
- <th>Name</th>
- <th> </th>
- </tr>
- <% @recipes.each do |course| %>
- <tr class=<%= cycle('even', 'odd') %>>
-   <td><%= link_to(image_tag(course["img_url"], height: '200', width: '200'), course["f2f_url"])%></td>
-  <td><%= link_to(course["title"], course["f2f_url"]) %> </td>
-  <td>
-    <%= link_to "&#9734;".html_safe, remove_external_favorite_recipe_path(course), method: :delete, class: "fav" %>
-    <%= link_to "&#9734;".html_safe, add_external_favorite_recipe_path(course), method: :post, class: "no-fav" %>
-  </td>
- </tr>
- <% end %>
-</table>
+<div id="home-wrapper">
+<% @recipes.each do |recipe| %>
+  <div class="home-thumbnails" style="background: url(<%= recipe.img_url %>)" id=<%= "thumb#{recipe.id}" %>>
+    <p id="thumb-text"> <%= link_to recipe.title, recipe_path(recipe) %> </p>
+    <% if current_user %>
+      <% if recipe.users.include? current_user %>
+        <%= link_to "&#9733;".html_safe, remove_external_favorite_recipe_path(recipe), method: :delete, class: "fav" %>
+      <% else %>
+        <%= link_to "&#9733;".html_safe, add_external_favorite_recipe_path(recipe), method: :post, class: "no-fav" %>
+      <% end %>
+    <% end %>
+  </div>
+<% end %>
+</div>
 <% end %>
