--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -1,19 +1,19 @@
 <h1> Foodies Anonymous </h1>
 
 <h2> Discover your next favorite dish... </h2>
-<button id="more"> See More </button>
-
-<%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Recipes" %>
-    <%= submit_tag "Search", :name => nil %>
-<% end %>
-
-<hr>
 
 <div id="home-wrapper">
+  <%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Type ingredient or recipe here and hit 'ENTER'" %>
+      <!-- <%= submit_tag "Go!", :name => nil %> -->
+  <% end %>
+
+
+<!-- <hr> -->
+
 <% @recipes.each do |recipe| %>
   <div class="home-thumbnails" style="background: url(<%= recipe.img_url %>)" id=<%= "thumb#{recipe.id}" %>>
-    <p id="thumb-text"> <%= link_to recipe.title, recipe_path(recipe) %> </p>
+    <p id="thumb-text"> <%= link_to recipe.title, recipe.source %> </p>
 
     <% if current_user %>
       <% if recipe.users.include? current_user %>
