--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,6 +58,23 @@
    transform: translateY(-50%);
    background: rgba(0, 0, 0, .5);
    line-height: 50px;
+   font-family: 'Hammersmith One', sans-serif;
+   color: white;
+   font-size: 15px;
+   font-weight: bold;
+   text-transform: uppercase;
+ }
+
+ #search {
+   margin: 75px 0 0 0;
+   width: 600px;
+   height: 50px;
+   /*border-radius: 50px;*/
+   border: none;
+   font-size: 30px;
+   background-color: rgba(99,	99,	99,	.25);
+   color: orange;
+   border-bottom: 2px solid white;
  }
 
  .cells {
