--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,15 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
 
   <body>
 
-    <!--<logo>--> <nav> <%= link_to "Home", root_path %> |   | Menu 3 </nav>
+    <!--<logo>--> <nav> <%= link_to "Home", root_path %> |  <%= link_to "Dashboard", dashboard_recipe_path(current_user) %>
+ | Menu 3 </nav>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
