--- a/app/views/searches/home.html.erb
+++ b/app/views/searches/home.html.erb
@@ -1,9 +1,8 @@
-<h1> Foodies Anonymous </h1>
+<h1 id="title"> Foodies Anonymous </h1>
 
 <h2> Discover your next favorite dish... </h2>
 
-<div id="home-wrapper">
   <%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Type ingredient or recipe here and hit 'ENTER'" %>
+      <%= text_field_tag :search, params[:search], placeholder: "type ingredient or recipe here..." %>
       <!-- <%= submit_tag "Go!", :name => nil %> -->
   <% end %>
