--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  */
 
  body {
-   background-color: rgba(60, 60, 60, .8);
+   /*background-color: rgba(60, 60, 60, .8);*/
+   background-color: rgba(29,	29,	29, .8);
    color: white;
    text-align: center;
  }
@@ -30,10 +31,16 @@
    font-family: 'Pacifico', cursive;
    font-weight: 500;
    font-size: 75px;
+   color: rgba(250,	128,	114,	1);
  }
 
  h2 {
    font-size: 35px;
+   margin-bottom: 75px;
+ }
+
+ h4 {
+   font-size: 20px;
  }
 
  /*img {
@@ -45,18 +52,18 @@
    background-color: black;
  }
 
- #home-wrapper {
+ #dash-wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
+   margin: 25px 0 0 0;
  }
 
  #thumb-text {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
-   background: rgba(0, 0, 0, .5);
    line-height: 50px;
    font-family: 'Hammersmith One', sans-serif;
    color: white;
@@ -66,27 +73,44 @@
  }
 
  #search {
-   margin: 75px 0 0 0;
-   width: 600px;
-   height: 50px;
+   width: 500px;
+   height: 60px;
    /*border-radius: 50px;*/
    border: none;
-   font-size: 30px;
-   background-color: rgba(99,	99,	99,	.25);
-   color: orange;
+   font-size: 35px;
+   background-color: rgba(74,	74, 74, .7);
+   color: rgba(250,	128,	114,	1);
    border-bottom: 2px solid white;
+   text-align: center;
  }
+
+ #instructions {
+   margin: 100px 0 0 0;
+ }
+
+/*#title {
+  font-size: 100px;
+}*/
 
  .cells {
    flex-direction: row;
    background-color: black;
  }
 
- .home-thumbnails {
-   width: 350px;
-   height: 350px;
+ .thumbnails {
+   width: 250px;
+   height: 250px;
    object-fit: contain;
    border-radius: 300px;
+   margin: 20px;
+   cursor: pointer;
+   background-color: rgba(0, 0, 0, .5);
+ }
+
+ .thumbnails:hover {
+   /*width: 265px;
+   height: 265px;*/
+   border: 3px solid white;
  }
 
  button {
@@ -102,12 +126,44 @@
    border-color: orange;
  }
 
+
  a.fav {
   text-decoration: none;
-  color: orange;
+  color: white;
 }
 
 a.no-fav {
   text-decoration: none;
   color: white;
 }
+
+.menu {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.7);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 10px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
