--- a/app/views/searches/home.html.erb
+++ b/app/views/searches/home.html.erb
@@ -1,6 +1,6 @@
-<h1 id="title"> Foodies Anonymous </h1>
+<h1 id="title"> Spoonfull </h1>
 
-<h2> Discover your next favorite dish... </h2>
+<h2> Discover your next favorite recipe! </h2>
 
   <%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
       <%= text_field_tag :search, params[:search], placeholder: "type ingredient or recipe here..." %>
