--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,22 +5,24 @@
     <!-- <%= submit_tag "Go!", :name => nil %> -->
 <% end %>
 
-
+<% if current_user %>
 <h3 id="instructions"> Click on a recipe to add it to your cookbook! </h3>
+<% else %>
+<h3 id="instructions"> You must be signed in to save recipes! </h3>
+<% end %>
+
 <% if (@recipes.nil? or @recipes == []) %>
 <p> <h2>No recipes found.. Sorry</h2></p>
 <% else %>
 
 <div id="dash-wrapper">
 <% @recipes.each do |recipe| %>
-  <div class="thumbnails" style="background: url(<%= recipe.img_url %>)" id=<%= "thumb#{recipe.id}" %>>
+  <div class="thumbnails" style="background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= recipe.img_url %>)" id=<%= "thumb#{recipe.id}" %>>
     <% if current_user %>
-      <% if recipe.users.include? current_user %>
-    <p id="thumb-text"><%= link_to recipe.title, remove_external_favorite_recipe_path(recipe), method: :delete, class: "no-fav" %> </p>
-    <% else %>
     <p id="thumb-text"><%= link_to recipe.title, add_external_favorite_recipe_path(recipe, :search => params[:search]), method: :post, class: "fav" %> </p>
+    <% else %>
+    <p id="thumb-text"><%= link_to recipe.title, recipe.source %> </p>
       <% end %>
-    <% end %>
   </div>
 <% end %>
 </div>
