--- a/app/views/searches/home.html.erb
+++ b/app/views/searches/home.html.erb
@@ -3,6 +3,5 @@
 <h2> Discover your next favorite recipe! </h2>
 
   <%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "type ingredient or recipe here..." %>
-      <!-- <%= submit_tag "Go!", :name => nil %> -->
+      <%= text_field_tag :search, params[:search], placeholder: "search ingredient or recipe..." %>
   <% end %>
