--- a/app/views/searches/home.html.erb
+++ b/app/views/searches/home.html.erb
@@ -2,6 +2,6 @@
 
 <h2> Discover your next favorite recipe! </h2>
 
-  <%= form_tag(recipes_path, :method => "get", id: "looking-for") do %>
+  <%= form_tag(searches_results_path, :method => "get", id: "looking-for") do %>
       <%= text_field_tag :search, params[:search], placeholder: "search ingredient or recipe..." %>
   <% end %>
