--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,7 +73,7 @@
    top: 0%;
    right: 0%;
    width: 100%;
-   background-color: rgba(29,	29,	29, 1);
+   background-color: rgba(29,	29,	29, .9);
    box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.5);
  }
 
@@ -144,6 +144,7 @@
    cursor: pointer;
    box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.5);
    background-blend-mode: multiply;
+
  }
 
  .thumbnails:hover {
