--- a/app/views/recipes/dashboard.html.erb
+++ b/app/views/recipes/dashboard.html.erb
@@ -1,7 +1,8 @@
 <h1> My Cookbook </h1>
-
+<h3> Double Click on a recipe to view it! </h3>
 <div id="dash-wrapper">
 <% if current_user %>
+
 <% current_user.favorites.includes(:recipe).each do |fav| %>
   <div class="thumbnails" style="background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url(<%= fav.recipe.img_url %>)" id=<%= "thumb#{fav.recipe.id}" %>>
       <p id="thumb-text"> <%= fav.recipe.title %> </p>
