--- a/app/views/searches/home.html.erb
+++ b/app/views/searches/home.html.erb
@@ -1,5 +1,7 @@
 <h1 id="title"> Spoonfull </h1>
 
+<!-- # <%= image_tag 'spoon.png', id: "spoon" %> -->
+
 <h2> Discover your next favorite recipe! </h2>
 
   <%= form_tag(searches_results_path, :method => "get", id: "looking-for") do %>
