--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,12 +35,12 @@
    font-weight: 500;
    font-size: 80px;
    color: rgba(250,	128,	114,	1);
-   margin-top: 100px;
+   margin: 100px 0 0 0;
  }
 
  h2 {
    font-size: 25px;
-   margin-bottom: 50px;
+   margin-bottom: 100px;
    font-family: 'Poppins', sans-serif;
  }
 
@@ -63,7 +63,7 @@ label {
    font-size: 35px;
    font-family: 'Pacifico', cursive;
    float: left;
-   margin: 3px 0 7px 20px;
+   margin: 3px 0 7px 25px;
    color: rgba(250,	128,	114,	1);
  }
 
@@ -135,6 +135,14 @@ label {
    margin: 100px 0 0 0;
  }
 
+ #message {
+   font-size: 20px;
+ }
+
+ /*.user-form {
+   background-color: blue;
+ }*/
+
  .cells {
    flex-direction: row;
    background-color: black;
@@ -166,18 +174,6 @@ a.no-fav {
   color: white;
 }
 
-.menu {
-  width: 35px;
-  height: 5px;
-  background-color: black;
-  margin: 6px 0;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -185,7 +181,7 @@ a.no-fav {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.7);
+    box-shadow: 10px 8px 10px 0px rgba(0,0,0, .8);
     z-index: 1;
     border-radius: 20px;
 }
@@ -199,4 +195,11 @@ a.no-fav {
 
 .dropdown-content a:hover {
   background-color: #f1f1f1
+}
+
+.menu-icon {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
 }
